syntax = "proto3";

package v1;
option go_package = "github.com/XaviFP/toshokan/api/user/proto/v1";

service UserAPI {
  rpc GetUserID (GetUserIDRequest) returns (GetUserIDResponse);
  rpc SignUp (SignUpRequest) returns (SignUpResponse);
  rpc LogIn (LogInRequest) returns (LogInResponse);
}

message GetUserIDRequest {
  oneof by{
    string token = 1;
    string username = 2;
  }
}

message GetUserIDResponse {
  string id = 1;
}

message LogInRequest {
  string username = 1;
  string password = 2;
}

message LogInResponse {
  string token = 1;
}

message SignUpRequest {
  string username = 1;
  string password = 2;
  string nick = 3;
  string bio = 4;
}

message SignUpResponse {
  string token = 1;
}